# Clashborn

./: .gitmodules  CMakeLists.txt  README.md
src/: Application.cpp  Application.h  AttackBox.cpp  AttackBox.h  Entity.h  EntityManager.cpp  EntityManager.h  Platform.cpp  Platform.h  Player.cpp  Player.h  ResourceManager.cpp  ResourceManager.h  RfidManager.cpp  RfidManager.h  SerialBridge.cpp  SerialBridge.h  main.cpp
src/Characters/: Characters.h
src/Components/: AABBCollision.h  Component.h  Health.h  Transform.h  Velocity.h
src/InputMaps/: InputMaps.h
src/Scenes/: BaseScene.h  CharacterSelection.cpp  CharacterSelection.h  GameScene.cpp  GameScene.h  MainMenu.cpp  MainMenu.h
src/Settings/: Misc.h  Specifications.h
src/math/: Vectors.h
